[package]
name = "containr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
env_logger = { version = "0.11.6", features = ["unstable-kv"] }
log = { version = "0.4.22", features = ["kv"] }
nix = { version = "0.29.0", features = ["fs", "sched", "signal"] }
oci-spec = "0.7.1"
serde = "1.0.217"
serde_json = "1.0.134"
