[package]
name = "containr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
kv = "0.24.0"
log = { version = "0.4.22", features = ["kv"] }
log4rs = "1.3.0"
nix = { version = "0.29.0", features = ["fs", "ioctl", "sched", "signal", "socket", "term", "uio"] }
oci-spec = "0.7.1"
serde = "1.0.217"
serde_json = "1.0.134"
